# underwriter-copilot

./: .gitignore  README.md
copilot-api/: main.py  pyproject.toml
copilot-api/agent/: deep_research.py  prompts.py  supervisor-testing-ground.ipynb  test_search.py  testing-ground.ipynb  uw-copilot-supervisor.ipynb
copilot-ui/: readme.md
