[project]
name = "copilot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.8",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "tavily-python>=0.7.12",
]
